@@ -23,9 +23,9 @@ import org.apache.kafka.clients.admin.GroupListing;
 import org.apache.kafka.clients.admin.ListGroupsOptions;
 import org.apache.kafka.clients.admin.ListGroupsResult;
 import org.apache.kafka.clients.admin.ListOffsetsResult;
-import org.apache.kafka.clients.admin.MemberDescription;
 import org.apache.kafka.clients.admin.OffsetSpec;
 import org.apache.kafka.clients.admin.ShareGroupDescription;
+import org.apache.kafka.clients.admin.ShareMemberDescription;
 import org.apache.kafka.common.GroupState;
 import org.apache.kafka.common.GroupType;
 import org.apache.kafka.common.TopicPartition;
@@ -36,7 +36,6 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -70,7 +69,7 @@ public class ShareGroupCommand {
     }
 
     public static void run(ShareGroupCommandOptions opts) {
-        try (ShareGroupService shareGroupService = new ShareGroupService(opts, Collections.emptyMap())) {
+        try (ShareGroupService shareGroupService = new ShareGroupService(opts, Map.of())) {
             if (opts.options.has(opts.listOpt)) {
                 shareGroupService.listGroups();
             } else if (opts.options.has(opts.describeOpt)) {
@@ -128,7 +127,7 @@ public class ShareGroupCommand {
             if (opts.options.has(opts.stateOpt)) {
                 String stateValue = opts.options.valueOf(opts.stateOpt);
                 Set<GroupState> states = (stateValue == null || stateValue.isEmpty())
-                    ? Collections.emptySet()
+                    ? Set.of()
                     : groupStatesFromString(stateValue);
                 List<GroupListing> listings = listShareGroupsInStates(states);
 
@@ -201,7 +200,7 @@ public class ShareGroupCommand {
         }
 
         ShareGroupDescription getDescribeGroup(String group) throws ExecutionException, InterruptedException {
-            DescribeShareGroupsResult result = adminClient.describeShareGroups(Collections.singletonList(group));
+            DescribeShareGroupsResult result = adminClient.describeShareGroups(List.of(group));
             Map<String, ShareGroupDescription> descriptionMap = result.all().get();
             if (descriptionMap.containsKey(group)) {
                 return descriptionMap.get(group);
@@ -209,9 +208,9 @@ public class ShareGroupCommand {
             return null;
         }
 
-        Map<TopicPartition, Long> getOffsets(Collection<MemberDescription> members) throws ExecutionException, InterruptedException {
+        Map<TopicPartition, Long> getOffsets(Collection<ShareMemberDescription> members) throws ExecutionException, InterruptedException {
             Set<TopicPartition> allTp = new HashSet<>();
-            for (MemberDescription memberDescription : members) {
+            for (ShareMemberDescription memberDescription : members) {
                 allTp.addAll(memberDescription.assignment().topicPartitions());
             }
             // fetch latest and earliest offsets
@@ -269,9 +268,9 @@ public class ShareGroupCommand {
         private void printMembers(ShareGroupDescription description) {
             int groupLen = Math.max(15, description.groupId().length());
             int maxConsumerIdLen = 15, maxHostLen = 15, maxClientIdLen = 15;
-            Collection<MemberDescription> members = description.members();
+            Collection<ShareMemberDescription> members = description.members();
             if (maybePrintEmptyGroupState(description.groupId(), description.groupState(), description.members().size())) {
-                for (MemberDescription member : members) {
+                for (ShareMemberDescription member : members) {
                     maxConsumerIdLen = Math.max(maxConsumerIdLen, member.consumerId().length());
                     maxHostLen = Math.max(maxHostLen, member.host().length());
                     maxClientIdLen = Math.max(maxClientIdLen, member.clientId().length());
@@ -279,7 +278,7 @@ public class ShareGroupCommand {
 
                 String fmt = "%" + -groupLen + "s %" + -maxConsumerIdLen + "s %" + -maxHostLen + "s %" + -maxClientIdLen + "s %s\n";
                 System.out.printf(fmt, "GROUP", "CONSUMER-ID", "HOST", "CLIENT-ID", "ASSIGNMENT");
-                for (MemberDescription member : members) {
+                for (ShareMemberDescription member : members) {
                     System.out.printf(fmt, description.groupId(), member.consumerId(), member.host(), member.clientId(),
                         member.assignment().topicPartitions().stream().map(part -> part.topic() + ":" + part.partition()).collect(Collectors.joining(",")));
                 }
